# kid-car-controller

./: .clang-format  .clang-format-ignore  .editorconfig  .gitignore  CMakeLists.txt  CompositeMotor.h  Controller.cpp  Controller.h  Drivetrain.cpp  EmergencyStopMotor.cpp  EmergencyStopMotor.h  Logger.cpp  ManualThrottle.cpp  ManualThrottle.h  Motor.cpp  Motor.h  README.md  RampingSelector.cpp  RampingSpeedLimitedEmergencyStopMotor.h  SpeedLimitSelector.cpp  SpeedLimitSelector.h  Steering.cpp  format.sh  kid-car-controller.ino  platformio.ini  test-watcher.sh  test.sh
kid-car-controller/: kid-car-controller.ino
lib/: WString.cpp  WString.h
src/: main.cpp
src/control/: AbstractThrottle.h  Controller.cpp  Controller.h  PS2Shield.cpp  PS2Shield.h  PriorityCompositeThrottle.cpp  PriorityCompositeThrottle.h  Serial2_PS2Shield.cpp  Serial2_PS2Shield.h  ThrottlePedal.cpp  ThrottlePedal.h  WirelessController.cpp  WirelessController.h  WirelessControllerThrottle.cpp  WirelessControllerThrottle.h
src/logging/: AbstractLogger.h  Logger.h  NullLogger.h  SerialLogger.h
src/motor/: AbstractMotor.h  CompositeMotor.cpp  CompositeMotor.h  DriveMotor.cpp  DriveMotor.h  EmergencyStopMotor.cpp  EmergencyStopMotor.h  Motor.cpp  Motor.h  NullMotor.cpp  NullMotor.h  RampingMotor.cpp  RampingMotor.h  RampingSpeedLimitedEmergencyStopMotor.cpp  RampingSpeedLimitedEmergencyStopMotor.h  SpeedLimitedMotor.cpp  SpeedLimitedMotor.h  SpeedRamper.cpp  SpeedRamper.h  SteeringMotor.cpp  SteeringMotor.h
src/pwm/: PWM.h
src/selection/: AccelerationRampingSelector.cpp  RampingSelector.h  (+4 more)
(+28 files in other folders)
